src/types/tests/snapshots/tgbot__types__tests__file__send_animation-5.snap
---
source: src/types/tests/file.rs
expression: actual_data
---
{
  "animation": "file-id",
  "chat_id": "1",
  "parse_mode": "Markdown"
}
