src/types/tests/snapshots/tgbot__types__tests__file__send_animation_entities_vs_parse_mode-2.snap
---
source: src/types/tests/file.rs
expression: actual_form
---
Form {
    fields: {
        "parse_mode": FormValue::Text(
            "Markdown",
        ),
        "animation": FormValue::Text(
            "file-id",
        ),
        "chat_id": FormValue::Text(
            "1",
        ),
    },
}
