src/types/tests/snapshots/tgbot__types__tests__file__send_audio-2.snap
---
source: src/types/tests/file.rs
expression: actual_form.into_fields()
---
[
    (
        "allow_paid_broadcast",
        FormValue::Text(
            "true",
        ),
    ),
    (
        "audio",
        FormValue::Text(
            "file-id",
        ),
    ),
    (
        "business_connection_id",
        FormValue::Text(
            "id",
        ),
    ),
    (
        "callback_query_id",
        FormValue::Text(
            "cqid",
        ),
    ),
    (
        "caption",
        FormValue::Text(
            "Caption",
        ),
    ),
    (
        "chat_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "direct_messages_topic_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "disable_notification",
        FormValue::Text(
            "true",
        ),
    ),
    (
        "duration",
        FormValue::Text(
            "100",
        ),
    ),
    (
        "message_effect_id",
        FormValue::Text(
            "effect-id",
        ),
    ),
    (
        "message_thread_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "parse_mode",
        FormValue::Text(
            "Markdown",
        ),
    ),
    (
        "performer",
        FormValue::Text(
            "Performer",
        ),
    ),
    (
        "protect_content",
        FormValue::Text(
            "true",
        ),
    ),
    (
        "receiver_user_id",
        FormValue::Text(
            "999",
        ),
    ),
    (
        "reply_markup",
        FormValue::Text(
            "{\"force_reply\":true}",
        ),
    ),
    (
        "reply_parameters",
        FormValue::Text(
            "{\"message_id\":1}",
        ),
    ),
    (
        "suggested_post_parameters",
        FormValue::Text(
            "{}",
        ),
    ),
    (
        "thumbnail",
        FormValue::Text(
            "https://google.com/favicon.ico",
        ),
    ),
    (
        "title",
        FormValue::Text(
            "Title",
        ),
    ),
]
