src/types/tests/snapshots/tgbot__types__tests__file__send_audio-5.snap
---
source: src/types/tests/file.rs
expression: actual_data
---
{
  "audio": "file-id",
  "caption": "caption",
  "chat_id": 1,
  "parse_mode": "Markdown"
}
