src/types/tests/snapshots/tgbot__types__tests__file__send_audio.snap
---
source: src/types/tests/file.rs
expression: actual_data
---
{
  "audio": "file-id",
  "chat_id": 1
}
